--- a/package.json
+++ b/package.json
@@ -17,16 +17,22 @@
     "@mdx-js/react": "^2.1.3",
     "@next/mdx": "^12.3.1",
     "@tailwindcss/line-clamp": "^0.3.1",
+    "algoliasearch": "^4.14.2",
     "directory-tree": "^3.3.1",
+    "dotenv": "^16.0.3",
     "framer-motion": "^6.5.1",
     "glob": "^7.2.0",
     "gray-matter": "^4.0.3",
     "heroicons": "^2.0.11",
+    "lucide-react": "^0.92.0",
     "next": "12.3.1",
+    "nprogress": "^0.2.0",
     "prismjs": "^1.26.0",
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2",
+    "react-instantsearch": "^6.38.0",
+    "react-instantsearch-dom": "^6.38.0",
     "remark-frontmatter": "3.0.0",
     "remark-gfm": "^1.0.0"
   },
@@ -34,10 +40,12 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.0",
     "@types/node": "17.0.8",
+    "@types/nprogress": "^0.2.0",
     "@types/prismjs": "^1.26.0",
     "@types/react": "17.0.38",
     "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-dom": "^18.0.6",
+    "@types/react-instantsearch-dom": "^6.12.3",
     "autoprefixer": "^10.4.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
